--- a/Code/GraphMol/CondensedGraphRxn/CMakeLists.txt
+++ b/Code/GraphMol/CondensedGraphRxn/CMakeLists.txt
@@ -1,10 +1,10 @@
 remove_definitions(-DRDKIT_GRAPHMOL_BUILD)
 add_definitions(-DRDKIT_CONDENSEDGRAPHRXN_BUILD)
 rdkit_library(CondensedGraphRxn
-	CondensedGraphRxn.cpp RxnCleaning.cpp FirCGR.cpp
+	CondensedGraphRxn.cpp RxnCleaning.cpp FirCRS.cpp
 	LINK_LIBRARIES MolStandardize MolHash ChemReactions ChemTransforms SmilesParse SubstructMatch GraphMol RDGeneral)
 
-      rdkit_headers(CondensedGraphRxn.h FirCGR.h DEST GraphMol/CondensedGraphRxn)
+      rdkit_headers(CondensedGraphRxn.h FirCRS.h DEST GraphMol/CondensedGraphRxn)
 
 rdkit_catch_test(testCondensedGraphRxn catch_main.cpp catch_tests.cpp 
 LINK_LIBRARIES CondensedGraphRxn ChemReactions SubstructMatch  SmilesParse )
